--- a/README
+++ b/README
@@ -8,5 +8,8 @@ This is a Qt project intended to be deployed as a BeerDie scoreboard, possibly o
 Some installs:
 Qt -> http://www.wikihow.com/Install-Qt-SDK-on-Ubuntu-Linux
 
+Tutorials:
+http://sector.ynet.sk/qt4-tutorial/my-first-qt-gui-application.html
+
 
 
